# cambot

./: .gitignore  foo.py  pyproject.toml  requirements.txt  run.py
cambot/: codenames.py  emojis.py  ephemeris.py  polls.py  saints.py  settings_example.py  utils.py  wordle.py
scripts/: extract_from_grammalecte.py  wordlize.py
