[tool.poetry]
name = "cambot"
version = "0.1.0"
description = ""
authors = ["Simon Junod <simon.junod@gammadia.ch>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
unidecode = "^1.3.6"
requests = "^2.31.0"
bs4 = "^0.0.1"
nextcord = "^2.5.0"
emoji = "^2.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
